# LLM-Orchestrated-Genetic-Circuit-Design-Workflow-Built-Around-Cello

./: .cursorrules  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEMO_CHECKLIST.md  EVALUATION_METRICS.md  LICENSE  LIMITATION.md  LOGIC_DESIGN_SKILL.md  MCP_AGENT_GUIDE.md  MODEL_ASSUMPTIONS.md  NOTICE  QUICKSTART.md  README.md  README_FOR_AI.md  Start Web Workspace.cmd  THIRD_PARTY_NOTICES.md  WHY_THIS_PROJECT.md  WORKFLOW.md  app.py  future_roadmap.md  llms-full.txt  llms.txt  oracle_evaluator.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  run-cello-example.ps1  vector_db.py  常用指令.txt  邏輯設計skill.json
.agents/: AGENTS.md
agents/: builder_agent  builder_agent.py  critic_agent.py  data_miner_agent.py  pm_agent.py  skill_extractor_agent.py  translator_agent.py
api/: README.md  main.py  routes.py  schemas.py  v2_routes.py  v2_schemas.py
application/: __init__.py  case01_evidence.py  demo_baseline.py  design_draft_service.py  design_task_benchmark.py  notification_service.py  research.py  secret_store.py  services.py  settings.py
benchmark_suite/: benchmark_controller.py  cello_constraint_evaluator.py  dataset.py  design_task_dataset.py  functional_scorer.py  kinetic_scorer.py  layout_critic.py  metabolic_scorer.py  parameter_fitting.py  readiness_evaluator.py  reporting.py  runner.py  scoring_profiles.py
catalog/: agent_catalog.py  workflow_kit_catalog.py
demo_cases/: DEMO_CASES.md  DEMO_REPORT_TEMPLATE.md  DEMO_SUMMARY.md  case_01_a_and_not_b_gfp.md  case_02_a_or_b_reporter.md  case_03_not_a_gfp.md
(+311 files in other folders)
