[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genetic_circuit_design_workflow"
version = "2.0.0"
description = "An LLM-orchestrated genetic-circuit design workflow built around Cello"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
